spec/e2e/if/var_in_then.lit
# error: [line 2] Error at "let": I was expecting an expression here.
if true { let foo; }
